# fastapi-crud-todolist-app

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/config/: db.py
src/controllers/: user_controller.py
src/models/: model.py  user.py
src/utils/: jwt.py
todo_list_app/: main.py
