[tool.poetry]
name = "todo-list-app"
version = "0.1.0"
description = ""
authors = ["fajarmh-mf <hamka.fajar@moneyforward.co.jp>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
email-validator = "^2.2.0"
sqlalchemy = "^2.0.36"
mysql-connector-python = "^9.1.0"
sqlmodel = "^0.0.22"
bcrypt = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:run"